--- a/task1/markdown/package.json
+++ b/task1/markdown/package.json
@@ -16,7 +16,7 @@
       "./styles/github-style.css"
     ],
     "markdown.previewScripts": [
-      "https://unpkg.com/mermaid@8.4.8/dist/mermaid.min.js",
+      "https://cdn.jsdelivr.net/npm/mermaid@11.6.0/dist/mermaid.min.js",
       "./scripts/preview.js"
     ],
     "markdown.markdownItPlugins": true
@@ -24,7 +24,8 @@
   "dependencies": {
     "markdown-it": "^13.0.1",
     "markdown-it-container": "^3.0.0",
-    "markdown-it-emoji": "^2.0.2"
+    "markdown-it-emoji": "^2.0.2",
+    "mermaid": "^11.6.0"
   },
   "commands": [
     {
